# lab-auto

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  README.ru.md  pyproject.toml
.agents/skills/guap-lab-workflow/: SKILL.md
.agents/skills/guap-lab-workflow/references/: commands.md  hermes.md
docs/integrations/: README.md  hermes.md  openclaw.md
examples/: hermes-skills.example.yaml  openclaw.json.example
scripts/: capture_guap_fixtures.py  install-agent-skills.ps1  install-agent-skills.sh
skills/guap-lab-workflow/: SKILL.md
skills/guap-lab-workflow/references/: openclaw.md
src/lab_auto/: __init__.py  archive.py  browser.py  cli.py  config.py  context.py  convert.py  files.py  logging.py  models.py  parsers.py  paths.py  review.py  session_crypto.py  session_store.py  state.py  submit.py  sync.py  workspace.py
tests/: conftest.py  test_archive.py  test_browser.py  test_browser_download.py  test_browser_login.py  test_browser_tasks_list.py  test_cli.py  test_config.py  test_convert.py  test_convert_paths.py  test_files.py  test_integration_parsers.py  test_live_playwright.py  test_logging.py  test_merge.py  test_models.py  test_parsers.py  test_paths.py  test_review.py  test_session_crypto.py  test_session_store.py  test_state.py  test_submit.py  test_sync.py  test_workspace.py
tests/fixtures/: README.md
