[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guap-lab-auto"
version = "0.1.0"
description = "CLI to sync GUAP student lab tasks, manage local folders, and submit PDF reports."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
  { name = "lab-automation contributors" },
]
keywords = ["guap", "cli", "playwright", "labs", "automation", "education"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Education",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12",
  "PyYAML>=6.0",
  "parsel>=1.9",
  "playwright>=1.44",
  "filelock>=3.13",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.0",
  "twine>=5.0",
]

[project.scripts]
lab-auto = "lab_auto.cli:app"

[project.urls]
Homepage = "https://github.com/R3LCH/lab_auto"
Repository = "https://github.com/R3LCH/lab_auto"
Issues = "https://github.com/R3LCH/lab_auto/issues"
Documentation = "https://github.com/R3LCH/lab_auto#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not live'"
markers = [
  "live: live GUAP/Playwright checks (require network and a saved session)",
]
